objects/Entities__c.object
<CustomObject>
    <description>Used to record details of a country, a cluster or another Schneider Electric entity (such as Oil &amp; Gas)</description>
    <fields>
        <fullName>CCC_Change_Management__c</fullName>
        <description>Evaluation of change management necessary in this entity for CCC</description>
        <label>CCC Change Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not significant</fullName>
                </value>
                <value>
                    <fullName>Significant</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCC_Interoperability__c</fullName>
        <description>Evaluation of the interoperability for this entity for CCC</description>
        <inlineHelpText>Evaluation of the interoperability for this entity for CCC</inlineHelpText>
        <label>CCC Interoperability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not significant</fullName>
                </value>
                <value>
                    <fullName>Significant</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCC_Mgmt_Willingness__c</fullName>
        <description>Evaluation of current management willingness for this entity for CCC</description>
        <inlineHelpText>Evaluation of current management willingness for this entity for CCC</inlineHelpText>
        <label>CCC Mgmt Willingness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <description>Cluster for each entity</description>
        <label>Cluster</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Please add any comments related to the current situation in this entity, necessary change management or points to escalate as critical</description>
        <inlineHelpText>Please add any comments related to the current situation in this entity, necessary change management or points to escalate as critical</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CriticalFlag__c</fullName>
        <description>Displays a red flag when the mark as critical checkbox has been ticked. Used to facilitate the identification of critical subjects in list views and reports</description>
        <formula>IMAGE(IF( MarkasCritical__c,&quot;/servlet/servlet.FileDownload?file=015A00000011ml2&quot;,&quot;/servlet/servlet.FileDownload?file=015A00000011mkq&quot;),&quot;Not Critical&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays a red flag when the mark as critical checkbox has been ticked. Used to facilitate the identification of critical subjects in list views and reports</inlineHelpText>
        <label>Critical Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Change_Management__c</fullName>
        <description>Evaluation of change management necessary in this entity for Field Service</description>
        <inlineHelpText>Evaluation of change management necessary in this entity for Field Service</inlineHelpText>
        <label>FS Change Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not significant</fullName>
                </value>
                <value>
                    <fullName>Significant</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Interoperability__c</fullName>
        <description>Evaluation of the interoperability for this entity for Field Service</description>
        <inlineHelpText>Evaluation of the interoperability for this entity for Field Service</inlineHelpText>
        <label>FS Interoperability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not significant</fullName>
                </value>
                <value>
                    <fullName>Significant</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FS_Mgmt_Willingness__c</fullName>
        <description>Evaluation of Management Willingness for Field Service</description>
        <inlineHelpText>Evaluation of Management Willingness for Field Service</inlineHelpText>
        <label>FS Mgmt Willingness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarkasCritical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag as critical (business stopping) in order to escalate to executive steering committee level. Records flagged as critical appear in prioritised reports &amp; dashboards</description>
        <inlineHelpText>Used to flag as critical (business stopping) in order to escalate to executive steering committee level. Records flagged as critical appear in prioritised reports &amp; dashboards</inlineHelpText>
        <label>Mark as Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>Associates the entities to the program</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Entities</relationshipLabel>
        <relationshipName>Entities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFAChange__c</fullName>
        <description>Evaluation of change management necessary in this entity for SFA</description>
        <inlineHelpText>Evaluation of change management necessary in this entity for SFA</inlineHelpText>
        <label>SFA Change Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not significant</fullName>
                </value>
                <value>
                    <fullName>Significant</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFA_Interoperability__c</fullName>
        <description>Evaluation of the interoperability for this entity for SFA</description>
        <inlineHelpText>Evaluation of the interoperability for this entity for SFA</inlineHelpText>
        <label>SFA Interoperability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not significant</fullName>
                </value>
                <value>
                    <fullName>Significant</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFA_Mgmt_Willingness__c</fullName>
        <description>Evaluation of current management willingness for this entity for SFA</description>
        <inlineHelpText>Evaluation of current management willingness for this entity for SFA</inlineHelpText>
        <label>SFA Mgmt Willingness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Entity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CriticalFlag__c</columns>
        <columns>MarkasCritical__c</columns>
        <columns>Cluster__c</columns>
        <columns>SFAChange__c</columns>
        <columns>SFA_Interoperability__c</columns>
        <columns>SFA_Mgmt_Willingness__c</columns>
        <columns>CCC_Change_Management__c</columns>
        <columns>CCC_Interoperability__c</columns>
        <columns>CCC_Mgmt_Willingness__c</columns>
        <columns>FS_Change_Management__c</columns>
        <columns>FS_Interoperability__c</columns>
        <columns>FS_Mgmt_Willingness__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BRAZIL_SE</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>SE-BR</value>
        </filters>
        <label>BRAZIL SE</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>